<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search_24"
        android:orderInCategory="1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="Search"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/sort_24"
        android:orderInCategory="2"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/send_24"
        android:orderInCategory="1"
        android:title="@string/send"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_note"
        android:icon="@drawable/baseline_add_24"
        android:orderInCategory="2"
        android:title="@string/add_Note"
        app:showAsAction="ifRoom" />
</menu>